# backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: admin.py  apps.py  authentication.py  permissions.py  settings.py  urls.py
api/accounts/: models.py  serializers.py  views.py
api/accounts/migrations/: 0001_initial.py
api/brands/: models.py  serializers.py  views.py
api/brands/migrations/: 0001_initial.py  0002_alter_brand_styles.py  0003_alter_brand_name.py
api/color/: models.py  serializers.py  views.py
api/color/migrations/: 0001_initial.py  0002_alter_color_code.py  0003_alter_color_id.py
api/items/: model.py  models.py  serializer.py  serializers.py  view.py  views.py
api/lists/: apps.py  models.py  serializers.py  urls.py  views.py
api/relationships/: models.py
api/season/: models.py  serializers.py  views.py
color-analysis/: Dockerfile  docker-compose.yml  palette_classification_demo_user.ipynb  requirements.txt
color-analysis/api/: celery_app.py  index.py  requirements.txt  tasks.py
ingestion/: check_colors.py  ingest.py  uniqlo.csv
ingestion/abercrombie/: abercrombie_output_cleaned.csv  abercrombie_output_cleaned_womens.csv  filter_abercrombie.py
ingestion/jcrew/: jcrew_output_0.csv  jcrew_output_1.csv  jcrew_output_11.csv  jcrew_output_12.csv  jcrew_output_13.csv  jcrew_output_14.csv  jcrew_output_15.csv  jcrew_output_16.csv  jcrew_output_17.csv  jcrew_output_18.csv  jcrew_output_2.csv  jcrew_output_3.csv  jcrew_output_6.csv  jcrew_output_7.csv  jcrew_output_8.csv  jcrew_output_9.csv
(+18 files in other folders)
